fixed CSS that causing images to stretch sometimes

--- a/theme/style.css
+++ b/theme/style.css
@@ -6,9 +6,11 @@ Author: Israel Gilyadov
 Version: 1.0
 Tags: deploy, israel, gilyadov, theme, wordpress, basic, simple, blog, nice, red, menu, gamer.
 .
-
-All rights reserved.
-
+Your theme can be your copyrighted work.
+Like WordPress, this work is released under GNU General Public License, version 2 (GPL).
+ 
+http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
+ 
 .
 */
 
@@ -197,7 +199,7 @@ body #wrapper #content #blogs #blog #b-content {
 	border:0px solid red;
 }
 body #wrapper #content #blogs #blog #b-content img, body #wrapper #content #blogs #blog #b-content iframe {
-	width:100%;
+	width:auto;
 	height:auto;
 	margin:0px auto;
 	border:0px solid red;
@@ -432,8 +434,7 @@ body #wrapper #content #sidebar-content {
 	border:0px solid red;
 }
 body #wrapper #content #sidebar-content h2 {
-	line-height:30%;
-	padding-top:15px;
+	line-height:80%;
 }
 body #wrapper #content #sidebar-content ul {
 	list-style:none;
@@ -483,13 +484,35 @@ body #wrapper #footer #copyright a, body #wrapper #footer #copyright a:visited {
 	border:0px solid red;
 }
 
-/* Text */
-.noPosts {
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	font-size: 17px;
-	font-weight: 700;
+/* Buttons */
+.grey_button {
+	background: #e3e3e3;
+	border: 1px solid #bbb;
+	border-radius: 3px;
+	-webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
+	box-shadow: inset 0 0 1px 1px #f6f6f6;
+	color: #333;
+	font: bold 12px/1 "helvetica neue", helvetica, arial, sans-serif;
+	padding: 8px 0 9px;
+	text-align: center;
+	text-shadow: 0 1px 0 #fff;
+    width: 150px;
+}
+.grey_button:hover {
+	background: #d9d9d9;
+	-webkit-box-shadow: inset 0 0 1px 1px #eaeaea;
+	box-shadow: inset 0 0 1px 1px #eaeaea;
+	color: #222;
+	cursor: pointer;
+}
+.grey_button:active {
+    background: #d0d0d0;
+    -webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    box-shadow: inset 0 0 1px 1px #e3e3e3;
+    color: #000;
 }
 
+/* Text */
 .strong-whiteglow {
     text-shadow: 0 0 1em #BBBBCC, 0 0 1em #97D2FD; 
     color: white;
